--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "repository": "https://github.com/Thinkful-Ed/blog-app-mongoose-challenge-solution",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha --exit"
   },
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.0.12",
+    "mongoose": "^5.2.3",
     "morgan": "^1.9.0",
     "uuid": "^3.2.1"
   },
